starting up with commerce web-site

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<button class="btn btn-success">hello</button>
+<header>
+    <app-navbar></app-navbar>
+</header>
+
+<main>
+    <router-outlet></router-outlet>
+</main>
