--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form [formGroup]="updateUserForm" class="bg-info p-5 w-75 mt-5 mx-auto" (ngSubmit)="onSubmit()">
+    <form  class="bg-info p-5 w-75 mt-5 mx-auto" >
         <h4 class="text-center m-4 " >add user</h4>
 
         <div class="form-group m-3">
@@ -16,7 +16,7 @@
         </div>
         <div class="text-center m-3">
             <button class="btn btn-success btn-lg m-1">update</button>
-            <button class="btn btn-danger btn-lg m-1" (click)="onCancel()">cancel</button>
+            <button class="btn btn-danger btn-lg m-1" >cancel</button>
         </div>
     </form>
 </div>
