--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,10 @@
             <a class="nav-link " aria-current="page" routerLink="home" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" routerLink="gallery">Gallery</a>
+            <a class="nav-link" aria-current="page" routerLink="gallery" routerLinkActive="active">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLink="register" routerLinkActive="active">Login/Register</a>
           </li>
         </ul>
       </div>
