--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,11 @@
-/*# sourceMappingURL=app.component.css.map */
+header {
+  box-sizing: border-box;
+}
+
+main {
+  box-sizing: border-box;
+}
+
+footer {
+  box-sizing: border-box;
+}/*# sourceMappingURL=app.component.css.map */
