--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -3,4 +3,11 @@
   color: #060606 !important;
   border-bottom: 3px solid #0d6efd;
   transition: all 0.2s ease;
+}
+
+.navbar .nav-menu__btn {
+  overflow: hidden;
+}
+.navbar .nav-menu__box1__box2 .nav-item a {
+  text-decoration: none;
 }/*# sourceMappingURL=navbar.component.css.map */
