--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -4,3 +4,27 @@
     border-bottom: 3px solid #0d6efd; // underline effect
     transition: all 0.2s ease;
   }
+
+.navbar{
+  width: 100%;
+  
+  .nav-menu{
+    &__btn{
+      overflow: hidden;
+    }
+    &__box1{
+      display: flex;
+      justify-content: center;
+      &__box2{
+        .nav-item{
+          a{
+            text-decoration: none;
+          }
+        }
+      }  
+      
+    }
+
+  }
+
+}
