--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,1 +1,16 @@
-/*# sourceMappingURL=styles.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: 70%;
+  }
+}
+@media (min-width: 1024px) {
+  .container {
+    width: 60%;
+  }
+}/*# sourceMappingURL=styles.css.map */
