--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
-<div class="container">
-    <p>footer works</p>
+<div class="container footer__box1">
+    <p class="footer-text">footer works</p>
 </div>
