--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,3 +1,4 @@
 $primary-color: #FFFFFF;
 $secondary-color: #2ecc71;
 $font-stack: 'Arial', sans-serif;
+$primary-font-size : clamp(10px , 1.8rem, 40px);
