--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,13 +4,13 @@
     box-sizing: border-box;
   }
   
-  @media (min-width: 768px) {
-    .container {
-      width: 70%;
-    }
-  }
-  @media (min-width: 1024px) {
-    .container {
-      width: 60%;
-    }
-  }
+  // @media (min-width: 768px) {
+  //   .container {
+  //     width: 70%;
+  //   }
+  // }
+  // @media (min-width: 1024px) {
+  //   .container {
+  //     width: 60%;
+  //   }
+  // }
