progress with small steps

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,4 +1,6 @@
 $primary-color: #FFFFFF;
 $secondary-color: #2ecc71;
+$main-color: #DCD3C9;
 $font-stack: 'Arial', sans-serif;
+$light-mode-font-color : #FFFFFF;
 $primary-font-size : clamp(10px , 1.8rem, 40px);
