--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -3,3 +3,15 @@
     justify-content: center;
     align-items: center;
   }
+
+@mixin flex-right{
+  display: flex;
+  justify-content: right;
+  align-items: center;
+}
+
+@mixin flex-left{
+  display: left;
+  justify-content: left;
+  align-items: center;
+}
