--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,21 +1,18 @@
+@use 'abstracts/tokens' as a;
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     overflow: hidden;
+    list-style: none;
+
   }
+  a{
+    text-decoration: none;
+  }
+
+ 
   
-  // @media (min-width: 768px) {
-  //   .container {
-  //     width: 70%;
-  //   }
-  // }
-  // @media (min-width: 1024px) {
-  //   .container {
-  //     width: 60%;
-  //   }
-  // }
-  :root {
-    --page-padding: 10%; // 10% on each side = total 20%
-    --max-width: 1600px; // optional safety limit
-  }
+ 
