--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,33 +1,20 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid nav-menu">
-    <button
-      class="navbar-toggler nav-menu__btn"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation">
+    <button class="navbar-toggler nav-menu__btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse nav-menu__box1" id="navbarSupportedContent">
       <ul class="navbar-nav nav-menu__box2">
         <li class="nav-item">
-          <a class="nav-link"
-             routerLink="home"
-             routerLinkActive="active"
+          <a class="nav-link" routerLink="home"  routerLinkActive="active"
              [routerLinkActiveOptions]="{ exact: true }">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"
-             routerLink="gallery"
-             routerLinkActive="active">Gallery</a>
+          <a class="nav-link" routerLink="gallery" routerLinkActive="active">Gallery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"
-             routerLink="register"
-             routerLinkActive="active">Login/Register</a>
+          <a class="nav-link" routerLink="register" routerLinkActive="active">Login/Register</a>
         </li>
       </ul>
     </div>
