--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,8 +7,7 @@
     <div class="collapse navbar-collapse nav-menu__box1" id="navbarSupportedContent">
       <ul class="navbar-nav nav-menu__box2">
         <li class="nav-item">
-          <a class="nav-link" routerLink="home"  routerLinkActive="active"
-             [routerLinkActiveOptions]="{ exact: true }">Home</a>
+          <a class="nav-link" routerLink="home"  routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="gallery" routerLinkActive="active">Gallery</a>
