--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg">
+<!-- <nav class="navbar navbar-expand-lg">
   <div class="container-fluid nav-menu">
     <button class="navbar-toggler nav-menu__btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -18,4 +18,19 @@
       </ul>
     </div>
   </div>
+</nav> -->
+
+
+<nav>
+    <ul>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="home"  routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="gallery" routerLinkActive="active">Gallery</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="register" routerLinkActive="active">Login/Register</a>
+      </li>
+    </ul>
 </nav>
