--- a/src/app/error-component/error-component.component.html
+++ b/src/app/error-component/error-component.component.html
@@ -1,4 +1,4 @@
-<section class="error-page">
+<!-- <section class="error-page">
     <div class="error-page__container">
       <h1 class="error-page__code">{{ errorCode }}</h1>
       <h2 class="error-page__message">{{ errorMessage }}</h2>
@@ -8,4 +8,16 @@
       <a routerLink="/" class="error-page__button">Homepage</a>
     </div>
   </section>
+   -->
+
+   <div class="error-container">
+    <div class="error-box">
+      <h1 class="error-code">404</h1>
+      <p class="error-text">Oops! The page you are looking for does not exist.</p>
+  
+      <button class="back-btn" (click)="goHome()">
+        ⬅ Go Back Home
+      </button>
+    </div>
+  </div>
   
